📚 Enhance Week 4 README with advanced system design concepts, including load shedding, SLA definitions, auto-scaling, high availability, distributed systems, security strategies, and performance engineering examples.